feat: update routes to 2.5.1
Routing Recognition and Generation Tools for Python 3

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/552
Log: update repo

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+routes (2.5.1-3) unstable; urgency=medium
+
+  * debian/patches/fix-doc-build.patch
+    - fix doc build, patch by s3v; Closes: #997346
+
+ -- Sandro Tosi <morph@debian.org>  Wed, 15 Jun 2022 22:02:53 -0400
+
+routes (2.5.1-2) unstable; urgency=medium
+
+  * Use the new Debian Python Team contact name and address
+
+ -- Sandro Tosi <morph@debian.org>  Sat, 04 Jun 2022 20:03:24 -0400
+
 routes (2.5.1-1) unstable; urgency=medium
 
   [ Ondřej Nový ]
